# Vision_artificial

./: .gitattributes  LICENSE  README.md
Ejercicios/T1/INTRO/: 1.IntroCV.ipynb
Ejercicios/T10/NOTEBOOKS/1-Formacion_imaxes/: 1_TEuclideas_3D.ipynb  2-THomoxeneas.ipynb  (+2 more)
Ejercicios/T2/Exercicios_clase/: Ej1.py  Ej2.py  tmp.py
Ejercicios/T4/CODIGO/C++/ContornosGradientes/: CMakeLists.txt  canny.cpp  contornos.cpp  enfoque.cpp  laplaciana.cpp  sobel.cpp
Ejercicios/T4/Exercicios_clase/: Ej1.py
Ejercicios/T4/Utilidades/: histerisis.py  nonmaxsup.py  thinning.py
Ejercicios/T5/C++/: AnCompConectadas.cpp  CMakeLists.txt  blobDetec.cpp  harris.cpp
Ejercicios/T5/NOTEBOOKS/: AnalCompConectadas.ipynb  BlodDetect.ipynb  Esquinas.ipynb  saliency_detection.ipynb
Ejercicios/T5/PYTHON/: BlobDetect.py  CompConectadas.py  harris.py
Ejercicios/T7/C++/: Adestra_detector_peons.cpp  CMakeLists.txt  Clsificador_gafas.cpp  Demo_detect_caras.cpp  cropEyeRegion.h  detector_peons.cpp  detector_sorrisos.cpp
Ejercicios/T7/NOTEBOOKS/: 3_Object_Detection_con_HOG_SVM.ipynb
Ejercicios/T7/PYTHON/: 4_haarCascades.py  Adestra_detector_peons.py  Clasificador_gafas_video.py  cropEyeRegion.py  detector_peons.py  imageClassificationHOGSVM.py
Ejercicios/T9/CODIGO_CV/C++/: CMakeLists.txt  LK_tracker.cpp  camShift_tracker.cpp  kalmanTracker.cpp  meanShift_tracker.cpp  multitracker_opcv.cpp  simple_tracker_opcv.cpp
Practicas/P1/Macros/: PASO1-install-cuda-MANUAL.sh  PASO2_install-libs-for-opencv.sh  PASO3-install-virtualenv-python-opencv.sh  PASO4-install-cuda-opencv.sh  PASO4-install-opencv.sh
Practicas/P1/Macros_old/: PASO1-install-cuda-MANUAL.sh  PASO2_install-libs-for-opencv.sh  PASO3-install-virtualenv-python-opencv.sh  PASO4-install-cuda-opencv.sh  PASO4-install-opencv.sh
Practicas/P1/meu_proxecto_Cpp_CV/: LEME_COMPILACION.md
Practicas/P2/P2-Adrian_Losada_Alvarez/: P2.ipynb  P2_backupCode.py
Practicas/P3/: rubrica_PIII.xlsx
Practicas/P4/: rubrica_PIV.xlsx
Practicas/P5/OLD/: rubrica_PV_plantilla.xlsx
Practicas/P5/P5-Adrian_Losada_Alvarez/: Models_Metrics.py  ReconocedorTextura.ipynb
Practicas/P5/TRASH/: BayesianoLineal.py  Haralick_features.csv  LBP_features.csv  LBP_features_normalized.csv  Mahalanobis.py
Practicas/P7/: rubrica_P7_plantilla.xlsx
TFM/: Documento.docx
(+141 files in other folders)
